# melody

./: .gitignore  .golangci.yaml  Cargo.toml  LICENSE  Makefile  README.md  filter_test.go  go.mod  go.sum  melody.h  pyproject.toml  renovate.json  types.go
.github/: pull_request_template.md
.github/workflows/: build-wheels.yml  go-bindings-ci.yaml  golang-ci.yaml  golang-lint.yaml  golang-tests.yaml  golangci-lint.yaml  python-bindings-ci.yml  rust-ci.yml  tests.yaml
_internal/tokenizers/: tokenizer_test.go
cohere_melody_vllm/: parser.py
examples/: basic.rs
go-bindings/: README.md  ffi.go  filter.go  filter_test.go  go.mod  go.sum  melody.h  options.go  stream_filter.go  stream_filter_test.go  types.go
go-bindings/_internal/tokenizers/: encode_test.go  hf_tokenizer.go  tokenizer.go
go-bindings/_internal/tokenizers/data/: 75k+bos+eos+eop.json  co.json
gobindings/: README.md  ffi.go  filter.go  filter_test.go  melody.h  options.go  orderedjson.go  orderedjson_test.go  templating_test.go  types.go
gobindings/orderedjson/: json.go  object.go  orderedjson.go  orderedjson_test.go
gobindings/tokenizers/: tokenizer.go
golang/: README.md  go.mod  types.go
golang/_internal/: README.md
golang/_internal/tokenizers/: decode_test.go  encode_test.go  hf_tokenizer.go  tokenizer.go
golang/_internal/vectormath/: vectormath.go  vectormath_test.go
golang/parsing/: action_filter.go  action_filter_test.go  citations_filter.go  citations_filter_test.go  filter.go  options.go  stream_filter_test.go
golang/templating/cmd4/: options.go
lib/orderedjson/: json.go  json_test.go  object.go  object_test.go
main/: conversions.go  main.go
parsing/: action_filter.go  action_filter_test.go  citations_filter.go  citations_filter_test.go  filter.go  filter_test.go  options.go  param_filter.go  param_filter_test.go  stream_filter.go  stream_filter_test.go  token_maps.go  types.go
python/cohere_melody/: __init__.py
python/vllm/: parser.py
release/: Dockerfile  go.mod  main.go
rust/: Cargo.toml  MIGRATION.md  README.md  filter.go  pyproject.toml
rust/examples/: basic.rs  basic_usage.rs
rust/src/: action_filter.rs  citations_filter.rs  ffi.rs  filter.rs  lib.rs  options.rs  param_filter.rs  python_ffi.rs  stream_filter.rs  tests.rs  types.rs
rust/src/templating/: melody_types.rs  mod.rs  ordered_json.rs  util.rs
rust/src/templating/cmd3/: cmd3_impl.rs  mod.rs  tests.rs
rust/src/templating/cmd4/: cmd4_impl.rs  mod.rs  tests.rs
rust/src/templating/prompts/: cmd3-v2.tmpl  cmd4-v1.tmpl  mod.rs
src/: action_filter.rs  citations_filter.rs  errors.rs  ffi.rs  filter.rs  lib.rs  options.rs  param_filter.rs  python_ffi.rs  tests.rs  tokenizers.rs  types.rs
src/parsing/: action_filter.rs  citations_filter.rs  filter.rs  mod.rs  options.rs  param_filter.rs  types.rs
src/templating/: lib.rs  mod.rs  templating.rs  types.rs  util.rs
src/templating/templates/: cmd3-v1.tmpl  cmd4-v1.tmpl
templating/: util.go
templating/cmd3/: cmd3.go  cmd3_test.go  options.go
templating/cmd3/test_data/: 1_message.txt
templating/cmd4/: cmd4.go  cmd4_test.go  options.go
templating/cmd4/test_data/: 1_message.txt
templating/prompts/: cmd3-v2.tmpl  cmd4-v1.tmpl  prompts.go
tests/: test_filter.py
tests/templating/cmd3/citation_render_test/: input.json  output.txt
tests/templating/cmd3/dev_instruction/: output.txt
tests/templating/cmd3/escaped_special_tokens/: input.json  output.txt
tests/templating/cmd3/json_mode/: input.json  output.txt
(+50 files in other folders)
