[package]
name = "melody-parsing"
version = "0.4.0"
edition = "2024"

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
regex = "1.10"
log = "0.4"
pyo3 = { version = "0.27.1", features = ["extension-module"], optional = true }
tokenizers = { version = "0.20.0", optional = true }
libc = {  version = "0.2.140", optional = true}
liquid = "0.26.11"
minijinja = { version = "2.14.0", features = ["loop_controls"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_path_to_error = "0.1.20"
pretty_assertions = "1.4.1"
thiserror = "2"

[dev-dependencies]
env_logger = "0.11"
tokenizers = { version = "0.22.1", features = ["http"] }

[lib]
name = "cohere_melody"
path = "src/lib.rs"
crate-type = ["rlib", "staticlib"]

[features]
default = ["ffi"]
ffi = []
python_ffi = ["pyo3"]
tkzrs = ["tokenizers", "libc"]

[lints.clippy]
pedantic = "warn"
