[package]
name = "melody-parsing"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
log = "0.4"
liquid = "0.26"
indexmap = { version = "2.0", features = ["serde"] }
tokenizers = { version = "0.22.1", features = ["http"] }

[dev-dependencies]
env_logger = "0.11"

[lib]
name = "melody_parsing"
path = "src/lib.rs"